# KDSource

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  DESARROLLO.md  DEVELOPMENT.md  Files_install.txt  Files_src.txt  INSTALL.ps1  KDSourceConfig.h.in  KSourceConfig.h.in  LEEME.md  LEEME.txt  README.md  init.sh  install-ksource.sh  pyproject.toml
.github/workflows/: ci.yml  format-check.yml  pypi.yml
Arch_com/: Guide_tracks.comp  KSource.c  KSource.comp  Monitor_tracks.comp  exe_McStas.sh  exe_Tripoli4.sh
Auxiliares/: dosemap.ipynb  doseplots.ipynb  optimize_bw.ipynb  plot.ipynb  plot_tally.ipynb  postproc.ipynb  preproc_tally.ipynb  preproc_tracks.ipynb  summary.ipynb  tally.ipynb
Auxiliares/.ipynb_checkpoints/: optimize_bw-checkpoint.ipynb  preproc_tracks-checkpoint.ipynb
McStas/: KSource.comp  Ptrac_source_difra.comp
clib/include/kdsource/: geom.h  kdsource.h.in  plist.h  utils.h
clib/src/: geom.c  kdsource.c  plist.c  resamplemcpl.c  utils.c  writemcpl.c
docs/: about-us.rst  api-ref.rst  conf.py  examples.rst  index.rst  intro.rst  kdsource_py.rst  kdtool.rst  make.bat  requirements.txt
docs/KDSource_Manual_spanish/: 1-intro.tex  2-desarrollo.tex  anexo.tex  main.tex
docs/KSource_Manual_spanish/: 1-intro.tex  2-desarrollo.tex  anexo.tex  main.tex
docs/examples/: 1_analytical_source.ipynb  2_analytical_source_time.ipynb  Example_surfsource.ipynb  Test_McStas_MPI.ipynb  Verification.ipynb  Verification_SurfCirc.ipynb  Verification_epan.ipynb  Verification_surfcirc.ipynb  Verification_time.ipynb  Verification_tophat.ipynb  samples_bws  source.xml
docs/examples/3_mcstas_source_det/: README.rst
docs/examples/3_mcstas_source_det/example/: mccode.sim
docs/examples/4_transform_plist/: source.xml  transl_and_rot.ipynb
docs/source/: Tutorial.ipynb  conf.py  documentation.rst  index.rst  installation.md  kdsource.rst  kdsource_c.rst  kdsource_py.rst  kdtool.rst  mcstas-template.rst  usage.md  user-guide.rst
docs/tutorial/: Tutorial.ipynb  tutorial.ipynb
docs/user-guide/: user-guide.ipynb
examples/: Verification.ipynb  example.ipynb
ksource_c/: aux.c  aux.h  ksource.c  ksource.h  ksource_c.sublime-workspace  metrics.c  metrics.h  plists.c  plists.h  test.c
ksource_c/test/: GF12p_inicio  test.c
ksource_py/: ARN_neutron  __init__.py  aux.py  kde.py  ksource.py  ksource_py.sublime-workspace  metrics.py  plists.py  stats.py  summary.py  tally.py  tracks.py
legacy/cmake/: KDSourceConfig.cmake.in
legacy/contrib/: KDSource.comp  Monitor_tracks.comp
legacy/contrib/2.7.2/: KDSource.comp
legacy/python/: pyproject.toml
legacy/python/kdsource/fact_dos/: ICRP_neutron  ICRP_photon  extract_dose_facts.py
legacy/src/kdtool/: beamtest.c  kdtool.sh
legacy/templates/: postproc.ipynb
legacy/templates/mcstas/: exe_McStas.sh
legacy/templates/mcstas/example/: kds_instrument_example.instr
legacy/templates/tripoli/: KDSource.c  exe_Tripoli4.sh  template.t4
legacy/tests/: CMakeLists.txt  test1.c
mcstas/contrib/: Guide_shielding.comp  Guide_tracks.comp  KDSource.comp  KSource.comp  Monitor_tracks.comp
mcstas/contrib/2.7.2/: KDSource.comp
mcstas/contrib/3.2/: KDSource.comp
python/: .coverage  .flake8  LEEME.md  MANIFEST.in  README.md  setup.py  tox.ini
python/kdsource/: __init__.py  __init__.py.in  _chooks.py  _chooks_loadlib.py  _cli_config.py  _cli_resample.py  _fact_dos_data.py  api.py.in  config.py.in  geom.py  kde.py  kdsource.py  plist.py  resample.py  stats.py  summary.py  surfsource.py  tally.py  test.py  utils.py  writemcpl.py
python/kdsource/fact_dos/: dose_facts.txt  extract_dose_facts.py  log_dose_facts.txt
python/kdsource/tests/: test_KDSource.py
python/ksource/: __init__.py  geom.py  kde.py  ksource.py  plist.py  stats.py  summary.py  tally.py  utils.py
python/ksource/fact_dos/: ARN_photon
python/ksource/tests/: test_KSource.py
python/tests/: test_KDSource.py
resample/: bw.txt  ksource_py  resample.c  resample.out  resample.sh  tracks.ssv
scripts/: ksource.sh  resample.c  templates.sh
src/kdsource/: geom.c  geom.h  kdsource.c  kdsource.h  plist.c  plist.h  utils.c  utils.h
src/kdtool/: beamtest.c  kdtool.sh  resample.c  templates.sh
src/ksource/: geom.c  geom.h  ksource.c  ksource.h  plist.c  plist.h  utils.c  utils.h
src/kstool/: beamtest.c  kstool.sh  resample.c  templates.sh
templates/: doseplots.ipynb  postproc.ipynb  preproc_tally.ipynb  preproc_tracks.ipynb
templates/.ipynb_checkpoints/: postproc-checkpoint.ipynb  preproc_tally-checkpoint.ipynb  preproc_tracks-checkpoint.ipynb
templates/mcstas/: README.md  README.rst  exe_McStas.sh  source.xml
templates/tripoli/: KDSource.c  KSource.c  exe_Tripoli4.sh  template.t4
test/: resample.c  resample.out  resampled.ssv  test.ipynb
test/.ipynb_checkpoints/: test-checkpoint.ipynb
tests/: CMakeLists.txt  test1.c
