##################################################################################
#                                                                                #
# CMake file to be used to install KDSource distribution.                        #
#                                                                                #
# See README.md file for installation instructions.                              #
#                                                                                #
# Written 2021 by O. I. Abbate.                                                  #
#                                                                                #
##################################################################################

cmake_minimum_required(VERSION 3.26.1...3.31)

file(READ "${CMAKE_SOURCE_DIR}/VERSION" PROJECT_VERSION)
string(STRIP "${PROJECT_VERSION}" PROJECT_VERSION)

project(KDSource VERSION "${PROJECT_VERSION}" LANGUAGES C )

option( KDS_EMBED_LIBXML2 "Download and embed libxml2 statically" OFF)
option( KDS_STRICT "Stricter compilation " OFF)

###################################################################
#Find dependencies (skip when generating sdist):
###################################################################

set( KDS_GENERATING_SDIST OFF )
if ( DEFINED SKBUILD_PROJECT_NAME AND "${SKBUILD_STATE}" STREQUAL "sdist" )
  set( KDS_GENERATING_SDIST ON )
endif()

if ( NOT KDS_GENERATING_SDIST )
  if( NOT DEFINED "MCPL_DIR" )
    #Need to invoke "mcpl-config --show cmakedir" if we want to be able to
    #work with mcpl-core installed via python wheels:
    execute_process(
      COMMAND mcpl-config --show cmakedir
      OUTPUT_VARIABLE "MCPL_DIR" OUTPUT_STRIP_TRAILING_WHITESPACE
    )
  endif()
  find_package(MCPL REQUIRED)

  if ( NOT KDS_EMBED_LIBXML2 )
    find_package(LibXml2 REQUIRED)
  else()
    # Configure FetchContent for libxml2 and ensure it is a static lib:
    include(FetchContent)
    set(_OLD_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
    set(BUILD_SHARED_LIBS OFF)
    FetchContent_Declare(
      libxml2
      #Use our own patched version, for a leaner build and to avoid installing
      #libxml2 things into the wheel.
      URL https://github.com/KDSource/libxml2/archive/refs/tags/v2.15.3_kdsource_patch1.tar.gz
      URL_HASH SHA256=be8e8f2c2f92275fdb8e091ccd1e055400931e4e0a9f9b1c80b639f7d3c32bb2
      #SOURCE_DIR "/some/where/clones/libxml2"
      #URL https://gitlab.gnome.org/GNOME/libxml2/-/archive/v2.15.3/libxml2-v2.15.3.tar.gz
      #URL https://github.com/GNOME/libxml2/archive/refs/tags/v2.15.3.tar.gz
      #URL_HASH SHA256=5c6060277173270356c3f1c321a640ab629bdabc5e5ba9095b99e00759ba0c39
    )
    FetchContent_MakeAvailable(libxml2)
    set(BUILD_SHARED_LIBS ${_OLD_BUILD_SHARED_LIBS})
    # Build static version
    set(BUILD_SHARED_LIBS OFF)
  endif()
endif()

###################################################################
#Prepare autogen dir for processed files (possibly in-source if
#creating a python sdist)
###################################################################

set( KDS_FROM_SDIST OFF )
if ( NOT DEFINED SKBUILD_PROJECT_NAME )
  set( kdsc_autogendir "${CMAKE_CURRENT_BINARY_DIR}/kdsc_autogen" )
  #Always cleanup autogendir
  if ( IS_DIRECTORY "${kdsc_autogendir}" )
    message( STATUS "Cleaning out ${kdsc_autogendir}" )
    file( REMOVE_RECURSE "${kdsc_autogendir}" )
  endif()
  file( MAKE_DIRECTORY "${kdsc_autogendir}" )
else()
  message( STATUS "scikit-build mode detected." )
  set ( kdsc_autogendir "${PROJECT_SOURCE_DIR}/skbld_autogen" )
  #Cleanup autogendir unless we are building FROM an sdist or creating one:
  if ( EXISTS "${kdsc_autogendir}/is_sdist.txt"
      AND NOT "${SKBUILD_STATE}" STREQUAL "sdist" )
    message(STATUS "Running from sdist - will not clean autogenerated files")
    set( KDS_FROM_SDIST ON )
  else()
    if ( IS_DIRECTORY "${kdsc_autogendir}" )
      message( STATUS "Cleaning out ${kdsc_autogendir}" )
      file( REMOVE_RECURSE "${kdsc_autogendir}" )
    endif()
    file( MAKE_DIRECTORY "${kdsc_autogendir}" )
    if ( "${SKBUILD_STATE}" STREQUAL "sdist" )
      file(TOUCH "${kdsc_autogendir}/is_sdist.txt")
    endif()
  endif()
endif()

###################################################################
#Find source files and prepare in autogen dir, including
#processed .in files:
###################################################################

set( KDS_PYMODNAME "kdsource" )

if ( NOT KDS_FROM_SDIST )
  file(GLOB KDS_C CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/clib/src/*.c")
  file(GLOB KDS_H CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/clib/include/kdsource/*.h")
  file(GLOB KDS_HIN CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/clib/include/kdsource/*.h.in")
  file(GLOB KDS_PY CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/python/${KDS_PYMODNAME}/*.py")
  file(GLOB KDS_PYIN CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/python/${KDS_PYMODNAME}/*.py.in")

  set( t1 "1000000 * ${PROJECT_VERSION_MAJOR}" )
  set( t2 "1000 * ${PROJECT_VERSION_MINOR}" )
  set( t3 "${PROJECT_VERSION_PATCH}" )
  math(EXPR "${PROJECT_NAME}_version_int" "(${t1})+(${t2})+(${t3})" )

  file( COPY ${KDS_PY} DESTINATION "${kdsc_autogendir}/python/kdsource/" )
  foreach( infile ${KDS_PYIN} )
    get_filename_component(infilebn "${infile}" NAME_WE)
    configure_file(
      "${infile}"
      "${kdsc_autogendir}/python/kdsource/${infilebn}.py"
      @ONLY
    )
  endforeach()

  file( COPY ${KDS_C} DESTINATION "${kdsc_autogendir}/clib/src" )
  file( COPY ${KDS_H} DESTINATION "${kdsc_autogendir}/clib/include/kdsource" )
  foreach( infile ${KDS_HIN} )
    get_filename_component( infilebn "${infile}" NAME_WE )
    configure_file(
      "${infile}"
      "${kdsc_autogendir}/clib/include/kdsource/${infilebn}.h"
      @ONLY
    )
  endforeach()
endif()

if ( KDS_GENERATING_SDIST )
  #Skip library+install parts when producing sdist.
  return()
endif()

###################################################################
# Installation destinations:
###################################################################

include(GNUInstallDirs)
if ( DEFINED SKBUILD_PROJECT_NAME )
  message( STATUS "scikit-build mode detected: clib will be placed in python module." )
  set( KDS_INSTALL_LIBDIR "${KDS_PYMODNAME}/data/lib" )
  set( KDS_INSTALL_INCLUDEDIR "${KDS_PYMODNAME}/data/include" )
else()
  set( KDS_INSTALL_LIBDIR "${CMAKE_INSTALL_LIBDIR}" )
  set( KDS_INSTALL_INCLUDEDIR "${CMAKE_INSTALL_INCLUDEDIR}" )
endif()

###################################################################
# Build library (entirely from autogendir)
###################################################################

file(GLOB KDS_SOURCES CONFIGURE_DEPENDS "${kdsc_autogendir}/clib/src/*.c")
file(GLOB KDS_HEADERS CONFIGURE_DEPENDS "${kdsc_autogendir}/clib/include/kdsource/*.h")

add_library(kdsource SHARED ${KDS_SOURCES} )

set_target_properties(
  kdsource
  PROPERTIES C_STANDARD 99
  C_STANDARD_REQUIRED ON C_EXTENSIONS OFF
)

target_include_directories(
  kdsource
  PRIVATE "${kdsc_autogendir}/clib/src"
  PUBLIC
  $<BUILD_INTERFACE:${kdsc_autogendir}/clib/include>
  $<INSTALL_INTERFACE:${KDS_INCLUDEDIR}>
)

target_link_libraries(
  kdsource
  PUBLIC LibXml2::LibXml2 MCPL::MCPL
)

install(
  FILES ${KDS_HEADERS}
  DESTINATION "${KDS_INSTALL_INCLUDEDIR}/kdsource/"
)

if ( KDS_STRICT )
  if ( MSVC )
    message(FATAL_ERROR "KDS_STRICT not implemented for MSVC" )
  endif()
  target_compile_options(
    kdsource PRIVATE
    -Wall -Wextra -Wpedantic -Wshadow -Wformat=2 -Wconversion
    -Wsign-conversion -Wnull-dereference
    #-Wno-unused-variable
  )
  target_compile_options( kdsource PRIVATE -Werror )
endif()

install( TARGETS kdsource DESTINATION "${KDS_INSTALL_LIBDIR}" )
